--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,179 @@
 streamlit==1.34.0
 geopy==2.4.1
-
+requests==2.31.0
+pillow==10.3.0
+absl-py==2.1.0
+altair==5.3.0
+annotated-types==0.6.0
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.15.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+blis==0.7.11
+cachetools==5.3.3
+catalogue==2.0.10
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+comm==0.2.2
+confection==0.1.4
+cymem==2.0.8
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+dnspython==2.6.1
+executing==2.0.1
+fastjsonschema==2.19.1
+filelock==3.13.4
+flatbuffers==24.3.25
+fqdn==1.5.1
+fsspec==2024.3.1
+gast==0.5.4
+geographiclib==2.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-pasta==0.2.0
+grpcio==1.63.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+intel-openmp==2021.4.0
+ipykernel==6.29.4
+ipython==8.24.0
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_server==2.14.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.8
+jupyterlab_pygment==0.3.0
+jupyterlab_server==2.27.1
+keras==3.3.3
+langcodes==3.4.0
+language_data==1.2.0
+libclang==18.1.1
+marisa-trie==1.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+mkl==2021.4.0
+ml-dtypes==0.3.2
+mpmath==1.3.0
+murmurhash==1.0.10
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+nltk==3.8.1
+notebook==7.1.3
+notebook_shim==0.2.4
+numpy==1.26.4
+ollama==0.2.0
+opt-einsum==3.3.0
+optree==0.11.0
+overrides==7.7.0
+packaging==24.0
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pip==24.0
+platformdirs==4.2.1
+preshed==3.0.9
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
+pure-eval==0.2.2
+pyarrow==16.1.0
+pybind11==2.12.0
+pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.1
+Pygments==2.18.0
+pymongo==4.7.2
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2024.1
+pywin32==306
+pywinpty==2.0.13
+PyYAML==6.0.1
+pyzmq==26.0.3
+referencing==0.35.1
+regex==2024.4.28
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.18.1
+Send2Trash==1.8.3
+setuptools==69.5.1
+six==1.16.0
+smart-open==6.4.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+stack-data==0.6.3
+sympy==1.12
+tbb==2021.12.0
+tenacity==8.3.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-intel==2.16.1
+termcolor==2.4.0
+terminado==0.18.1
+thinc==8.2.3
+tinycss2==1.3.0
+toml==0.10.2
+toolz==0.12.1
+torch==2.3.0
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+typer==0.9.4
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.11.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.1
+wasabi==1.1.2
+watchdog==4.0.0
+wcwidth==0.2.13
+weasel==0.3.4
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
