--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-streamlit==1.34.0
-geopy==2.4.1
-requests==2.32.0
-pillow==10.3.0
 absl-py==2.1.0
 altair==5.3.0
 annotated-types==0.6.0
@@ -36,11 +32,13 @@ dnspython==2.6.1
 executing==2.0.1
 fastjsonschema==2.19.1
 filelock==3.13.4
+Flask==3.0.3
 flatbuffers==24.3.25
 fqdn==1.5.1
 fsspec==2024.3.1
 gast==0.5.4
 geographiclib==2.0
+geopy==2.4.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-pasta==0.2.0
@@ -54,21 +52,22 @@ intel-openmp==2021.4.0
 ipykernel==6.29.4
 ipython==8.24.0
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.1
-Jinja2==3.1.4
+Jinja2==3.1.3
 joblib==1.4.2
 json5==0.9.25
 jsonpointer==2.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 jupyter_server==2.14.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.1.8
-jupyterlab_pygment==0.3.0
+jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.1
 keras==3.3.3
 langcodes==3.4.0
@@ -103,7 +102,7 @@ packaging==24.0
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
-pip==24.0
+pillow==10.3.0
 platformdirs==4.2.1
 preshed==3.0.9
 prometheus_client==0.20.0
@@ -128,6 +127,7 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 referencing==0.35.1
 regex==2024.4.28
+requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
@@ -144,6 +144,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 stack-data==0.6.3
+streamlit==1.34.0
 sympy==1.12
 tbb==2021.12.0
 tenacity==8.3.0
